--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>信息公布网站</title>
+    <title>信息</title>
     <link rel="stylesheet" href="css/styles1.css">
 </head>
 <body>
