--- a/index1.html
+++ b/index1.html
@@ -39,6 +39,11 @@
                 <td>系统维护</td>
                 <td>网站将于本周末进行系统维护，期间可能无法访问。</td>
             </tr>
+            <tr>
+                <td>2024-04-15</td>
+                <td>系统</td>
+                <td><img src="../images/banner.jpg" alt="哈哈" title="欧吼" ></td>
+            </tr> 
             </tbody>
         </table>
     </section>
