--- a/index1.html
+++ b/index1.html
@@ -42,7 +42,7 @@
             <tr>
                 <td>2024-04-15</td>
                 <td>系统</td>
-                <td><img src="../images/banner.jpg" alt="哈哈" title="欧吼" ></td>
+                <td><img src="images/banner.jpg" alt="哈哈" title="欧吼" ></td>
             </tr> 
             </tbody>
         </table>
