--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 					<div class="contact-button">
 						<a href="index1.html" class="btn">Contact Us</a>
 					</div>
+					<div class="contact-button">
+						<a href="index3.html" class="btn">MUSIC</a>
+					</div>
 				</div>
 				<!-- copyright -->
 				<div class="copyright-footer">
