--- a/index3.html
+++ b/index3.html
@@ -135,7 +135,7 @@
             <div id="albumArt"></div>
             <select id="songSelect" onchange="changeSong()">
                 <option value="./music/song1.mp3">不遗憾</option>
-                <option value="./music/song2.flac">交换余生</option>
+                <option value="./music/song2.mp3">剪云者</option>
                 <option value="./music/song3.mp3">违背的青春</option>
             </select>
             <audio id="audio"></audio>
