--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<!-- copyright -->
 				<div class="copyright-footer">
 					<div class="w3l-copy-right">
-						<p>Copyright &copy; 2024.Company name All rights reserved.</a></p>
+						<p>Copyright &copy; 2024.KEVINN All rights reserved.</a></p>
 					</div>
 				</div>
 				<!-- //copyright -->
